--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,15 @@
 :root {
   --red: rgb(186, 57, 79);
+  --redHover: rgb(215, 71, 96);
   --blue: rgb(0, 114, 150);
+  --blueHover: rgb(8, 150, 195);
   --green: rgb(27, 120, 59);
+  --greenHover: rgb(42, 170, 86);
   --grey: rgb(102, 102, 102);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 html, body {
@@ -14,6 +21,20 @@ html, body {
 
 *, *::after, *::before {
   box-sizing: border-box;
+}
+
+p {
+  font-size: 14px;
+  line-height: 1.6em;
+  padding: 0 0px 20px;
+  text-align: left;
+  color: #333333;
+  margin: 0;
+  margin-top: 15px;
+}
+
+button {
+  cursor: pointer;
 }
 
 /* === Navigation === */
@@ -41,8 +62,8 @@ html, body {
   padding: 10px;
 }
 
-
 .nav a {
+  cursor: pointer;
   display: block;
   padding: 15px 25px;
   text-decoration: none;
@@ -51,14 +72,18 @@ html, body {
   transition: background 300ms ease;
 }
 
-.nav a:hover {
+.nav a:hover, .nav a:focus {
   background: rgb(73, 80, 95);
 }
+
+.active {
+  background: rgb(73, 80, 95);
+}
+
 /* === Navigation End === */
-
-
 /* === Hero === */
 .hero {
+  margin-top: 80px;
   display: grid;
   align-items: center;
   justify-items: center;
@@ -69,9 +94,8 @@ html, body {
   background-repeat: no-repeat;
   background-position: top;
   background-attachment: fixed;
-  background-size: 100% 100%;
-  /* background-size: cover; */
-
+  /* background-size: 100% 100%; */
+  background-size: cover;
 }
 
 .hero header {
@@ -86,25 +110,27 @@ html, body {
   margin: .5em;
 }
 
-.hero p {
+.hero header p {
   margin: 0;
   font-size: 25px;
+  font-weight: 600;
   text-shadow: 1px 1px 0 #333;
+  text-align: center;
+  color: #fff;
 }
+
 /* === Navigation End === */
-
-
 /* === About Section === */
 .about {
   display: grid;
-  grid-gap: 20px;
-  justify-items: center;
-  padding-top: 70px;
+  grid-gap: 60px;
+  margin: 0 10%;
+  padding-top: 100px;
 }
 
-  /* === About CARDS=== */
-
+/* === About CARDS=== */
 .about__cards {
+  max-width: 1440px;
   display: grid;
   grid-template-columns: repeat(3, minmax(100px, 360px));
   grid-gap: 30px;
@@ -119,7 +145,7 @@ html, body {
 }
 
 .card_content {
-  flex:1;
+  flex: 1;
   display: grid;
   padding: 20px 20px 30px;
   align-content: stretch;
@@ -149,6 +175,7 @@ html, body {
   border: none;
   font-size: 18px;
   color: #fff;
+  transition: background 200ms ease;
 }
 
 .green h3 {
@@ -175,12 +202,29 @@ html, body {
   background: var(--red);
 }
 
+.btn:hover, .btn:focus {
+  cursor: pointer;
+}
 
-  /* === About COLS === */
+.btn-1:hover, .btn-1:focus {
+  background: var(--greenHover);
+}
+
+.btn-2:hover, .btn-2:focus {
+  background: var(--blueHover);
+}
+
+.btn-3:hover, .btn-3:focus {
+  background: var(--redHover);
+}
+
+/* === About COLS === */
 .about__cols {
+  max-width: 1440px;
   display: grid;
   grid-template-areas: "col1 col2";
   grid-gap: 30px;
+  margin-bottom: 60px;
 }
 
 .col {
@@ -190,7 +234,7 @@ html, body {
 }
 
 .col_content {
-  flex:1;
+  flex: 1;
   display: grid;
   padding: 20px 20px 30px;
   align-content: stretch;
@@ -200,35 +244,263 @@ html, body {
 .col-1 {
   grid-area: col1;
 }
+
 .col-2 {
   grid-area: col2;
-}
-
-.col_content {
-  color: var(--grey);
 }
 
 .col_content h3 {
   font-size: 20px;
   font-weight: 700;
-  margin: 0;
+  margin: 10px 0 20px;
+  text-align: center;
 }
 
-.col_content p {
-  font-size: 14px;
-  line-height: 1.6em;
-  padding: 0 0px 20px;
-  text-align: left;
-  color: #333333;
-  margin: 0;
-  margin-top: 15px;
+.col_content p:last-of-type {
+  margin-top: 0;
 }
 
 .col_content .btn {
   justify-self: end;
   padding: 10px 30px;
-  border-radius: 5px;
+  border-radius: 10px;
   border: none;
   font-size: 18px;
+  background: #fff;
   color: var(--grey);
+  border: 1px solid #ccc;
+  transition: background 200ms ease;
+}
+
+.col_content .btn:hover, .col_content .btn:focus {
+  background: #e6e6e6;
+}
+/* === About Section END === */
+
+
+/* === Services Section === */
+.services {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  padding-top: 100px;
+}
+
+.services header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 65px 0 85px;
+  background: #eee;
+}
+
+.services header h2 {
+  margin-top: 20px;
+  font-size: 36px;
+  font-weight: 500;
+  text-shadow: 2px 2px #aaa;
+}
+
+.services header p {
+  font-size: 18px;
+  line-height: 1.6em;
+  text-align: center;
+}
+
+.services__cols {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(4, 260px);
+}
+
+.services__cols .col_content {
+  grid-template-rows: 1fr 3fr 1fr;
+
+}
+
+.services__cols h3 {
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  color: #666;
+  margin: 0 0 15px;
+}
+
+/* .services__cols p {
+  padding: 10px 20px;
+  margin: 0 0 15px;
+} */
+
+.services__cols button {
+  justify-self: center;
+  align-self: center;
+  padding: 10px 30px;
+  border-radius: 10px;
+  border: none;
+  font-size: 18px;
+  background: #fff;
+  color: var(--grey);
+  border: 1px solid #ccc;
+  transition: background 200ms ease;
+}
+
+.services__cols button:hover, .services__cols button:focus {
+  background: #e6e6e6;
+}
+
+.col-sm {
+  align-items: center;
+}
+
+.col-big {
+  grid-column: 1 / -1;
+  margin-bottom: 60px;
+}
+
+.col-big h3 {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.col-big p {
+  padding: 0;
+  margin: 0 0 10px;
+}
+
+.col-big_content {
+  display: grid;
+  padding: 30px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.col-big button {
+  margin-top: 15px;
+  justify-self: start;
+}
+/* === Services section END === */
+
+/* === Contact section === */
+.contact {
+  display: grid;
+  background: #999;
+  justify-content: center;
+  grid-gap: 20px;
+  background-image: url('../img/bg-3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+.contact header {
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px auto 0;
+  max-width: 800px;
+
+}
+
+.contact header h2 {
+  margin-top: 20px;
+  font-size: 36px;
+  font-weight: 500;
+  color: #fff;
+  text-shadow: 2px 2px #333;
+}
+
+.contact header p {
+  font-size: 18px;
+  line-height: 1.6em;
+  text-align: center;
+  background: rgba(255,255,255,.4);
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.contact form {
+  max-width: 800px;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "name     textarea"
+    "email    textarea"
+    "subject  textarea"
+    "empty    submit";
+  justify-items: stretch;
+  margin-bottom: 60px;
+}
+
+.form_name {
+  grid-area: name;
+}
+
+.form_email {
+  grid-area: email;
+}
+
+.form_subject {
+  grid-area: subject;
+}
+
+form #name, form #email, form #subject, form textarea {
+  width: 100%;
+}
+
+form fieldset {
+  position: relative;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+form input {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background: rgba(255,255,255,.4);
+}
+
+form label {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+}
+
+form textarea {
+  justify-self: stretch;
+  grid-area: textarea;
+  border-radius: 5px;
+  padding: 10px;
+  background: rgba(255,255,255,.4);
+  border: none;
+}
+
+form #submit {
+  grid-area: submit;
+  justify-self: start;
+  background-color: rgb(40, 40, 40);
+  color: #fff;
+  border: 1px solid #fff;
+  font-size: 1em;
+  padding: 10px 40px;
+  transition: background 200ms ease;
+}
+
+form #submit:hover, form #submit:focus {
+  cursor: pointer;
+  background: var(--grey);
+}
+
+/* === Contact section END === */
+
+
+footer {
+  display: grid;
+  justify-items: center;
+  height: 1000px;
 }
