--- a/css/main.css
+++ b/css/main.css
@@ -282,18 +282,28 @@ button {
 /* === Services Section === */
 .services {
   display: grid;
-  justify-content: center;
   justify-items: center;
   padding-top: 100px;
 }
 
 .services header {
+  justify-self: stretch;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 65px 0 85px;
+  margin: 0 0 60px;
+  height: 300px;
   background: #eee;
+  background-image: url('../img/bg-2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center top;
+}
+
+.services header h2, .services header p {
+  color: #fff;
 }
 
 .services header h2 {
@@ -307,6 +317,7 @@ button {
   font-size: 18px;
   line-height: 1.6em;
   text-align: center;
+  max-width: 800px;
 }
 
 .services__cols {
@@ -509,8 +520,21 @@ form input::placeholder, form textarea::placeholder {
 /* === Contact section END === */
 
 
-footer {
+.footer {
+  margin: 0 auto;
+  padding: 10px;
   display: grid;
   justify-items: center;
-  height: 1000px;
+  background: rgb(56, 62, 76);
+}
+
+.footer_text p {
+  color: #999;
+  font-size: 18px;
+}
+
+.footer_text a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
 }
