--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ margin-top: 4px;
   background-position: top;
   background-attachment: fixed;
   /* background-size: 100% 100%; */
-  background-size: cover;
+  background-size: cover !important;
 }
 
 .hero header {
@@ -218,7 +218,7 @@ margin-top: 4px;
   }
 
   .hero h1 {
-    font-size: 2em;
+    font-size: 2.5em;
   }
 
   .hero header p {
@@ -438,7 +438,7 @@ margin-top: 4px;
   background: #eee;
   background-image: url('../img/bg-2.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover !important;
   background-attachment: fixed;
   background-position: center top;
 }
@@ -564,7 +564,7 @@ margin-top: 4px;
   grid-gap: 20px;
   background-image: url('../img/bg-3.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover !important;
   background-attachment: fixed;
   background-position: center;
 }
