--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,16 @@ margin-top: 4px;
   }
 }
 
+@media (max-width: 500px) {
+  .hero h1 {
+    font-size: 2em;
+  }
+
+  .hero header p {
+    font-size: .8em;
+  }
+}
+
 /* === Hero end === */
 /* === About Section === */
 .about {
@@ -247,7 +257,7 @@ margin-top: 4px;
 
 .card {
   background: #f2f2f2;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -333,10 +343,13 @@ margin-top: 4px;
 /* === About COLS === */
 .about__cols {
   display: grid;
+  grid-template-columns: repeat(2, minmax(100px, 600px));
   grid-template-areas: "col1 col2";
   grid-gap: 30px;
   margin-top: 30px;
   margin-bottom: 60px;
+  justify-items: center;
+  justify-content: center;
 }
 
 .col {
@@ -362,7 +375,7 @@ margin-top: 4px;
   grid-area: col2;
 }
 .col img {
-  max-width: 100%;
+  width: 100%;
 }
 
 .col_content h3 {
@@ -399,20 +412,22 @@ margin-top: 4px;
   }
 
   .about__cards, .about__cols {
-    grid-template-columns: 1fr;
-    max-width: min-content;
-    margin: 0 auto 30px;
+    grid-template-columns: minmax(200px, 400px);
+    /* max-width: min-content; */
+    margin: 0 30px 30px;
   }
 
   .about__cols {
+    grid-template-columns: 1fr;
     grid-template-areas: "col1" "col2";
     max-width: 100%;
+    margin: 0 30px 30px;
   }
 }
 
 @media (max-width: 500px) {
   .about__cards {
-    max-width: 100%;
+    /* max-width: 100%; */
   }
 
   .card {
@@ -535,21 +550,21 @@ margin-top: 4px;
   justify-self: start;
 }
 
-@media (max-width:800px) {
+@media (max-width:1150px) {
   .services__cols {
-    grid-template-columns: repeat(2, 260px);
+    grid-template-columns: repeat(2, minmax(100px, 360px));
     padding: 10px;
-    grid-gap: 10px;
+    grid-gap: 30px;
   }
 }
 @media (max-width:600px) {
   .services__cols {
-    grid-template-columns: minmax(260px, 1fr);
+    grid-template-columns: minmax(260px, 400px);
     justify-items: center;
   }
 
   .col-sm {
-    width: 260px;
+    width: 100%;
   }
 }
 
